Correct error in index.ipynb
The first blue dot was used as the starting point for our regression line, so the error is zero and we do not see a red error bar.

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,7 +261,7 @@
    "metadata": {},
    "source": [
     "> Let's interpret the chart above.  That first red line shows that our regression formula does not perfectly predict that first show.   \n",
-    "> * Our actual data -- the first blue dot -- shows that when $x = 100$, $y =  150$.  \n",
+    "> * Our actual data -- the second blue dot -- shows that when $x = 100$, $y =  150$.  \n",
     "> * However, our regression line predicts that at $x = 100$, $y = 250$.  \n",
     "\n",
     "> So **our regression line is off by 100, indicated by the length of the red line.** "
